fix initialization, refactor plugins to be external

--- a/plugin.xml
+++ b/plugin.xml
@@ -15,6 +15,8 @@
         <clobbers target="CloudStorage" />
         <clobbers target="window.plugins.CloudStorage" />
     </js-module>
+    <js-module src="www/backends/local.js" name="backends.local" />
+    <js-module src="www/backends/icloud.js" name="backends.icloud" />
 
     <dependency id="fr.pierrickrouxel.cordova.plugin.iCloudKV" url="https://github.com/pierrickrouxel/phonegap-icloudkv-plugin.git" />
 
