--- a/plugin.xml
+++ b/plugin.xml
@@ -11,9 +11,9 @@
         <engine name="cordova" version=">=3.0.0" />
     </engines>
 
-    <js-module src="www/cloud-storage.js" name="CloudStorage">
-        <clobbers target="CloudStorage" />
-        <clobbers target="window.plugins.CloudStorage" />
+    <js-module src="www/json-storage.js" name="JSONStorage">
+        <clobbers target="JSONStorage" />
+        <clobbers target="window.plugins.JSONStorage" />
     </js-module>
 
     <dependency id="com.shazron.cordova.plugin.keychainutil" url="https://github.com/shazron/KeychainPlugin.git" />
@@ -25,13 +25,13 @@
     <!-- ios -->
     <platform name="ios">
         <config-file target="config.xml" parent="/*">
-            <feature name="CloudStorage">
-                <param name="ios-package" value="ONMSCloudStorage"/>
+            <feature name="JSONStorage">
+                <param name="ios-package" value="ONMSJSONStorage"/>
             </feature>
         </config-file>
 
-        <header-file src="src/ios/ONMSCloudStorage.h" />
-        <source-file src="src/ios/ONMSCloudStorage.m" />
+        <header-file src="src/ios/ONMSJSONStorage.h" />
+        <source-file src="src/ios/ONMSJSONStorage.m" />
         
         <!--
         <framework src="Security.framework" />
@@ -42,8 +42,8 @@
     <!--android -->
     <platform name="android">
         <config-file target="res/xml/config.xml" parent="/*">
-            <feature name="CloudStorage">
-                <param name="android-package" value="org.opennms.cordova.storage.CloudStoragePlugin"/>
+            <feature name="JSONStorage">
+                <param name="android-package" value="org.opennms.cordova.storage.JSONStoragePlugin"/>
             </feature>
         </config-file>
 
@@ -51,7 +51,7 @@
         <framework src="com.google.android.gms:play-services-base:+" />
         -->
 
-        <source-file src="src/android/org/opennms/cordova/storage/CloudStoragePlugin.java" target-dir="src/org/opennms/cordova/storage/" />
-        <source-file src="src/android/org/opennms/cordova/storage/CloudStorageResult.java" target-dir="src/org/opennms/cordova/storage/" />
+        <source-file src="src/android/org/opennms/cordova/storage/JSONStoragePlugin.java" target-dir="src/org/opennms/cordova/storage/" />
+        <source-file src="src/android/org/opennms/cordova/storage/JSONStorageResult.java" target-dir="src/org/opennms/cordova/storage/" />
     </platform>
 </plugin>
