rename to cordova-plugin-storage

--- a/tests/plugin.xml
+++ b/tests/plugin.xml
@@ -1,7 +1,7 @@
 <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
 	xmlns:rim="http://www.blackberry.com/ns/widgets"
 	xmlns:android="http://schemas.android.com/apk/res/android"
-	id="org.opennms.cordova.storage.tests"
+	id="cordova-plugin-storage-tests"
 	version="0.1.0-dev">
 	<name>Cordova JSON Storage Tests</name>
 	<license>Apache 2.0</license>
