--- a/plugin.xml
+++ b/plugin.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <plugin xmlns="http://www.phonegap.com/ns/plugins/1.0"
   xmlns:android="http://schemas.android.com/apk/res/android"
-  id="org.opennms.cordova.storage"
+  id="cordova-plugin-storage"
   version="0.1.0-dev">
 
     <name>Cordova JSON Storage Plugin</name>
